--- a/1_Zadania/dodatkowe/3_GalleryWithFilter/index.html
+++ b/1_Zadania/dodatkowe/3_GalleryWithFilter/index.html
@@ -24,5 +24,5 @@
     <button id="showButton">Show</button>
     <button id="hideButton">Hide</button>
 </body>
-
+<script src="js/app.js"></script>
 </html>
