Additional chapter - ToDoList

--- a/1_Zadania/dodatkowe/6_ToDoList/index.html
+++ b/1_Zadania/dodatkowe/6_ToDoList/index.html
@@ -5,11 +5,13 @@
     <meta charset="UTF-8">
     <title>WSEI</title>
     <link rel="stylesheet" href="css/style.css">
+    <script src="js/app.js" type="text/javascript"></script>
 </head>
 
 <body>
-
-    <input id="taskInput" placeholder="Place your task here"><br>
+    <div id="counter">0</div><br/>
+    <input id="taskInput" placeholder="Place your task here">
+    <input id="numberInput" placeholder="Choose your priority"><br>
     <button id="addTaskButton">Add task</button>
 
     <!-- additional task
