--- a/1_Zadania/dodatkowe/12_let_const/index.html
+++ b/1_Zadania/dodatkowe/12_let_const/index.html
@@ -7,7 +7,10 @@
 </head>
 
 <body>
+    <script src="js/app.js"></script>
     <script src="js/zadanie01.js"></script>
+    <script src="js/zadanie02.js"></script>
+    <script src="js/zadanie04.js"></script>
 </body>
 
 </html>
