--- a/1_Zadania/dodatkowe/15_Rest_spread_operator/index.html
+++ b/1_Zadania/dodatkowe/15_Rest_spread_operator/index.html
@@ -7,7 +7,8 @@
 </head>
 
 <body>
-    <script src="js/out.js"></script>
+    <script src="js/app.js"></script>
+    <script src="js/zadanie03.js"></script>
 </body>
 
 </html>
